...
                key={returningChip.id}
                activeOpacity={0.85}
                onPress={() =>
                  fire({ chip_id: returningChip.id, response_type: "chip" })
                }
                style={styles.returningButton}
                testID="onboarding_im_returning"
                accessibilityLabel="onboarding_im_returning"
              >
                <Text
                  style={[styles.linkText, { fontSize: rfs(18, width) }]}
                >
                  {returningChip.label}
...
